fix build; mask-truncate improvements

--- a/ui/packages/ui/src/app/components/formHelpers/MaskOrTruncateItem.css
+++ b/ui/packages/ui/src/app/components/formHelpers/MaskOrTruncateItem.css
@@ -10,6 +10,7 @@
         padding-top: 5px;
         &-icon{
             color: var(--pf-global--palette--red-100);
+            cursor: pointer;
         }
     }
 }
